Quorum3/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignBoolObjObjectField.quorum
class Main
    Object v
    action Main
        v:SetValue()
        Test(v)
    end

    action Test(Boolean var)
    end
end
